etc/tests/error/type/del-immutable.ny
;; expect: cannot reassign immutable
use std.core

def x = 1
del x
